# apps/api/openapi.yaml
@@ -36,16 +36,9 @@
                       "type": "boolean"
                     },
                     "image": {
-                      "anyOf": [
-                        {
-                          "type": "string"
-                        },
-                        {
-                          "type": "null"
-                        }
-                      ]
+                      "type": "string"
                     },
-                    "createdAt": {
+                    "updatedAt": {
                       "type": "string"
                     }
                   },
@@ -55,7 +48,7 @@
                     "email",
                     "emailVerified",
                     "image",
-                    "createdAt"
+                    "updatedAt"
                   ],
                   "additionalProperties": false
                 }
